# DS_testing

./: .dockerignore  Makefile  README.md  docker-compose.yaml
flask_app/: Dockerfile  Makefile  pyproject.toml
flask_app/app/: main.py
flask_app/tests/: tests_app.py
memory_monitor/: Dockerfile  Makefile  pyproject.toml
memory_monitor/src/: main.py
memory_monitor/tests/: tests_monitor.py
prometheus/: prometheus_config.yaml
tests/: test_flask_app.py
