[tool.poetry]
name = "DocuSketch_testing/app"
version = "0.1.0"
description = ""
authors = ["Nerush Kirill (home) <nerush.kirill@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "^3.0.0"
redis = "^5.0.1"
python = "^3.11"
httpx = "^0.25.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
coverage = "^7.3.2"
bandit = "^1.7.5"
black = "^23.10.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
ruff = "^0.1.1"
pre-commit = "^3.5.0"
fakeredis = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
